# liview

./: .gitignore  CMakeLists.txt  LICENSE  PKGBUILD  README.md  SPEC.md  build-deb.sh  install-Arch.sh  uca.xml  uninstall-Arch.sh
debian/xfce-liview/DEBIAN/: control
debian/xfce-liview/usr/share/applications/: xfce-liview.desktop
po/: en.po  es.po
src/: main.cpp  viewer.cpp  viewer.h
